@@ -2,6 +2,10 @@ plugins {
     id("ygdrasil.conventions.kalligraphie-kmp-library")
 }
 
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
 kotlin {
     sourceSets {
         commonMain.dependencies {
@@ -9,6 +13,7 @@ kotlin {
         }
         jvmTest.dependencies {
             implementation(project(":kalligraphie:unicode"))
+            implementation(project(":kalligraphie:shaping"))
             implementation(project(":kalligraphie:font:core"))
             implementation(project(":kalligraphie:font:sfnt"))
             implementation(kotlin("test"))
